# PostBOUND

./: .gitignore  .gitmodules  .readthedocs.yml  CHANGELOG.md  Dockerfile  HISTORY.md  README.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  pyproject.toml  requirements.txt
db-support/: README.md
postbound/: .dbschema_query_cache.json  .gitignore  CHANGELOG.md  Eval_QueryRuntimeVariation.ipynb  README.md  UES_TopKBounds.ipynb  __init__.py  __init__.pyi  _base.py  _bench.py  _core.py  _hints.py  _ipython.py  _jointree.py  _physops.py  _pipelines.py  _qep.py  _stages.py  _validation.py  bench.py  duckdb.py  experiment-job-intermediate-cardinalities.py  experiment-job-native-runtimes.py  experiment-job-original-rutimes.py  experiment-query-runtime-variation.py  mysql.py  mysqlrun.py  parser.py  postbound.py  postgres.py  postgresrun.py  pyproject.toml  regression-tests.py  relalg.py  requirements.txt  set-workload.sh  shortcuts.py  train.py  transform.py  ues-calculator.py  (+3 more)
postbound/analysis/: MoSQLParsingTests.ipynb  NetworkXTests.ipynb  workloads.py
postbound/db/: __init__.py  _db.py  _duckdb.py  mysql.py  postgres.py
postbound/docs/: README.md
postbound/docs/source/: api.rst  ceb.rst  conf.py  databases.rst  examples.rst  index.rst  infrastructure.rst  optimization_pipeline.rst  optimization_process.rst  qal.rst  setup.rst
postbound/evaluation/: plots-presentation.R
postbound/examples/: .gitignore  example-01-basic-workflow.py  example-02-native-query-plans.py  example-03-random-join-order.py  example-04-cardinality-estimation.py  example-05-machine-learning.py
postbound/experiments/: README.md  __init__.py  __init__.pyi  analysis.py  benchmarking.py  ceb.py  executor.py  experiment-estimation-robustness.py  experiment-intermediate-cardinalities.py  experiment-job-cardinality-distortion.py  experiment-job-exhaustive-plans.py  experiment-job-intermediate-cardinalities.py  experiment-job-native-runtimes.py  experiment-job-optimal-runtimes.py  experiment-job-pg-cost-model.py  experiment-job-pg-optimization-times.py  experiment-job-prewarming-handler.py  experiment-job-prewarming-influence.sh  experiment-job-true-card-runtimes.py  experiment-job-ues.py  experiment-native-runtimes.py  experiment-pg-analyze-stability.py  experiment-query-runtime-variation.py  interactive.py  querygen.py  runner.py  workloads.py
postbound/old/: Eval Analysis.ipynb  UES_TopKBounds.ipynb  experiment-runner.py  sequential-experiments.sql  workload-executor.py
postbound/old/analysis/: selection.py  workloads.py
postbound/old/evaluation/: plots-presentation.R
postbound/old/experiments/: jobcardinalities.py
postbound/old/postgres/: explain.py
postbound/old/tests/: test_mosp.py
postbound/old/transform/: qbuild.py
postbound/old/workloads/: job-results-implicit.csv  job-results-true-cards.csv  job-ues-workload-base-bushy.csv  job-ues-workload-base-linear.csv  job-ues-workload-base.csv  ssb-ues-results-base-pg12_4.csv  ssb-ues-workload-base.csv
postbound/opt/: __init__.py  __init__.pyi  _analysis.py  _cardinalities.py  _helpers.py  _hints.py  _joingraph.py  dynprog.py  enumeration.py  native.py  noopt.py  presets.py  randomized.py  tonic.py  ues.py
postbound/optimizer/: __init__.py  _cardinalities.py  _hints.py  _joingraph.py  _jointree.py  _pipelines.py  dynprog.py  joingraph.py  jointree.py  noopt.py  physops.py  planparams.py  presets.py  randomized.py  stages.py  ues.py  validation.py
postbound/optimizer/policies/: __init__.py  cardinalities.py  jointree.py
postbound/optimizer/strategies/: __init__.py  dynprog.py  enumeration.py  fastgres.py  native.py  noopt.py  randomized.py  tonic.py  ues.py
postbound/postbound/: __init__.py  postbound.py  shortcuts.py
postbound/postbound/db/: __init__.py  db.py  mysql.py  postgres.py  systems.py
postbound/postbound/experiments/: __init__.py  analysis.py  ceb.py  exporter.py  interactive.py  runner.py  workloads.py
postbound/postbound/optimizer/: __init__.py  data.py  joingraph.py  jointree.py  physops.py  planparams.py  presets.py  stages.py  validation.py
postbound/postbound/qal/: __init__.py  base.py  clauses.py  expressions.py  format.py  formatter.py  joins.py  parser.py  predicates.py  projection.py  qal.py  relalg.py  transform.py
postbound/postbound/tests/: config.ini  regression_suite.py  test_database.py  test_qal.py  test_samples.py  test_ues_optimization.py  test_util.py
postbound/postbound/util/: __init__.py  collections.py  dataframe.py  dicts.py  errors.py  jsonize.py  logging.py  misc.py  networkx.py  numbers.py  proc.py  stats.py  system.py  typing.py
postbound/postbound/vis/: __init__.py  db.py  fdl.py  graphs.py  optimizer.py  plots.py  tonic.py  trees.py
postbound/postgres/: explain.py  hint.py
postbound/qal/: __init__.py  _core.py  _formatter.py  _qal.py  base.py  clauses.py  expressions.py  formatter.py  parser.py  qal.py  relalg.py  transform.py
postbound/tests/: .dbschema_query_cache.json  regression_suite.py  test_jointree.py  test_parser.py  test_postgres.py  test_qal.py  test_relalg.py  test_samples.py  test_tonic_optimization.py  test_ues_optimization.py  test_ues_topk.py  test_util.py
postbound/tools/: ceb-generator.py
postbound/train/: __init__.py  _train.py
postbound/transform/: db.py  job.py  mosp.py  ues.py  util.py
postbound/util/: __init__.py  __init__.pyi  _df.py  _errors.py  collections.py  df.py  dicts.py  errors.py  jsonize.py  logging.py  misc.py  networkx.py  numbers.py  nx.py  proc.py  stats.py  system.py  typing.py
postbound/vis/: __init__.py  __init__.pyi  db.py  fdl.py  graphs.py  optimizer.py  plots.py  tonic.py  trees.py
postbound/workloads/: job-results-implicit-nonlj-pg12_4.csv  job-workload-implicit.csv  ssb-results-implicit-pg12_4.csv  ssb-results-implicit.csv  ssb-results-true-cards.csv  ssb-ues-results-base.csv
postbound/workloads/topk-setups/: job-ues-workload-topk-1-approx-linear.csv  job-ues-workload-topk-4-approx-linear.csv  job-ues-workload-topk-5-approx-smart.csv  job-ues-workload-topk-5-linear.csv  job-ues-workload-topk-5-smart.csv  (+1 more)
(+612 files in other folders)
