[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PostBOUND"
version = "0.16.1"
authors = [{ name = "Rico Bergmann", email = "rico.bergmann1@tu-dresden.de" }]
description = "PostBOUND is an adaptable framework to implement and evaluate database query optimizers"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
]
dependencies = [
    "levenshtein==0.27.1",
    "natsort==8.4.0",
    "networkx==3.3",
    "numpy==2.2.3",
    "pandas==2.2.3",
    "pglast==7.2",
    "psycopg[binary]==3.2.9",
    "tomli==2.0.1",
    "tqdm==4.66.5",
]

[project.optional-dependencies]
vis = [
    "matplotlib==3.10.1",
    "seaborn==0.13.2",
    "graphviz==0.20.3",
]
mysql = [
    "mysql-connector-python==9.0.0"
]


[project.urls]
"Homepage" = "https://github.com/rbergm/PostBOUND"

[tool.setuptools.packages.find]
where = ["."]
include = ["postbound*"]

[tool.setuptools.package-data]
"postbound.workloads" = ["**"]
