[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PostBOUND"
version = "0.20.1"
authors = [{ name = "Rico Bergmann", email = "rico.bergmann1@tu-dresden.de" }]
description = "PostBOUND is a research framework to prototype and benchmark database query optimizers"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
dependencies = [
    "lazy-loader~=0.4",
    "levenshtein~=0.27",
    "natsort~=8.4",
    "networkx~=3.5",
    "numpy~=2.3",
    "pandas~=2.3",
    "pglast~=7.10",
    "psycopg[binary]~=3.2",
    "tqdm~=4.67",
]

[project.optional-dependencies]
vis = [
    "matplotlib~=3.10",
    "seaborn~=0.13",
    "graphviz~=0.21",
]
duckdb = [
    "quacklab~=1.4",
]
mysql = [
    "mysql-connector-python~=9.5"
]


[project.urls]
"Homepage" = "https://github.com/rbergm/PostBOUND"

[tool.setuptools.packages.find]
where = ["."]
include = ["postbound*"]

[dependency-groups]
doc = [
    "ipython>=9.8.0",
    "sphinx>=9.1.0",
    "sphinx-book-theme>=1.1.4",
]
