[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PostBOUND_test"
version = "0.3.0"
authors = [{ name = "Rico Bergmann", email = "rico.bergmann1@tu-dresden.de" }]
description = "PostBOUND is an adaptable framework to implement and evaluate database query optimizers"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
]
dependencies = [
    "graphviz",
    "levenshtein",
    "mo-sql-parsing",
    "mysql-connector-python",
    "natsort",
    "networkx",
    "numpy",
    "pandas",
    "psycopg[binary]",
    "scipy"
]

[project.urls]
"Homepage" = "https://github.com/rbergm/PostBOUND"

[tool.setuptools.packages.find]
where = ["."]
include = ["postbound*"]
