[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PostBOUND"
version = "0.6.0"
authors = [{ name = "Rico Bergmann", email = "rico.bergmann1@tu-dresden.de" }]
description = "PostBOUND is an adaptable framework to implement and evaluate database query optimizers"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
]
dependencies = [
    "build==1.2.1",
    "graphviz==0.20.3",
    "levenshtein==0.25.1",
    "matplotlib==3.9.0",
    "mo-sql-parsing==10.651.24172",
    "mysql-connector-python==9.0.0",
    "natsort==8.4.0",
    "networkx==3.3",
    "numpy==2.0.0",
    "pandas==2.2.2",
    "psycopg[binary]==3.2.1",
    "scipy==1.14.0",
    "setuptools==59.6.0",
    "tomli==2.0.1",
    "wheel==0.43.0"
]

[project.optional-dependencies]
vis = [
    "seaborn==0.13.2"
]


[project.urls]
"Homepage" = "https://github.com/rbergm/PostBOUND"

[tool.setuptools.packages.find]
where = ["."]
include = ["postbound*"]
